# PhotonMapping

./: CMakeLists.txt  README.md  main.cpp
cmake/: add-libraries-linux.cmake  target-link-libraries-linux.cmake
include/: base.h  canvas.h  kdtree.h  kdtree_object.h  light.h  light_object.h  object.h  photon_map.h  photon_map_shader.h  renderer.h  shader.h
include/cuda/: kdtree.cuh  photon_map.cuh
include/host/: photon_map.h
samples/CornellBox/: back_wall.mtl  ceiling.mtl  floor.mtl  left_sphere.mtl  left_wall.mtl  light.mtl  light_ceiling.mtl  right_sphere.mtl  right_wall.mtl  water.mtl
shaders/: scene_shader.frag  scene_shader.vert
shaders/kdtree/: initialize.comp
shaders/photon_map/: build_photon_map.comp  visualize_photon_map.comp
source/: camera.cpp  kdtree.cpp  kdtree_object.cpp  light_object.cpp  object.cpp  photon_map.cpp  photon_map_shader.cpp  renderer.cpp  renderer_kdtree.cpp  renderer_photon.cpp  shader.cpp
source/cuda/: kdtree.cu  photon_map.cu
source/host/: kdtree.cpp  photon_map.cpp
